fix overflow

--- a/src/components/PageTitleBar/PageTitleBar.scss
+++ b/src/components/PageTitleBar/PageTitleBar.scss
@@ -3,7 +3,6 @@
 /* ===== PageTitleBar SCSS ===== */
 
 .page-title-container {
-  width: 100%;
   height: 50px;
   background-color: hsl(37, 100%, 90%);
   box-shadow: 0px 2.5px $deepest-yellow;
